#27 test(user): 작가 검색 기능 테스트 코드 작성